- Fixes to the errors to the grouping variables - Revised scenario generation, users select percentage change. This updates the previous distribution based method, since country-specific distributions do not have sufficient observations. - Summary of elasiticities for thematic clusters - Regression analysis for indicators - Implementation of elasticity - Scenario models integration
